tests/kubernetes/custom-5.3.1/compliant/secret.yaml
apiVersion: v1
kind: Secret
metadata:
  name: compliant-secret
  namespace: secure-ns
  annotations:
    kms-key: "projects/cis-gke-compliant/locations/us-central1/keyRings/cis-gke-compliant-keyring/cryptoKeys/cis-gke-compliant-gke-secrets"
    kubernetes.io/encryption-provider: "gcp-kms"
type: Opaque
data:
  username: YWRtaW4=
  password: MWYyZDFlMmU2N2Rm
