tests/kubernetes/custom-5.3.1/compliant/kyverno-test.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: custom-5.3.1-compliant
policies:
  - ../../../../policies/kubernetes/pod-security/custom-5.3.1.yaml
resources:
  - secret.yaml
results:
  - policy: custom-5.3.1
    rule: validate-secret-encryption
    resources:
      - compliant-secret
    kind: Secret
    result: pass
  - policy: custom-5.3.1
    rule: check-encrypt-secrets-kms
    resources:
      - compliant-secret
    kind: Secret
    result: pass
